# osm2pgsql

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .luacheckrc  .travis.yml  900913.sql  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Dockerfile  Dockerfile-test  Makefile  Makefile.am  Makefile.in  NEWS  README  README.kor.md  README.md  README.txt  README_lua.md  TODO  UTF8sanitizer.c  UTF8sanitizer.cpp  appveyor.yml  avl.c  avl.h  binarysearcharray.c  binarysearcharray.cpp  binarysearcharray.h  bst.c  bst.h  buffer.cpp  buffer.hpp  build_geometry.cpp  build_geometry.h  build_geometry.hpp  building.lua  config.h.in  (+157 more)
docs/: CMakeLists.txt  Doxyfile  README.md  analysis.md  bucket-index.md  export.md  flex-advanced-topics.md  flex.md  gazetteer.md  lua-lib.md  lua.md  manpage_from_python.py  migrations.md  multi.md  node-persistent-cache-reader.1  nodecachefilereader.1  osm2pgsql-gen.md  osm2pgsql-replication.1  osm2pgsql.1  osm2pgsql.md  pgsql.md  usage.md
gazetteer/: Makefile  Makefile.am  README.txt  details.php  extract_countrynames.sql  gazetteer-functions.sql  gazetteer-functions.sql.in  gazetteer-index.sql  gazetteer-loaddata.sql  gazetteer-tables.sql  gazetteer.c  gazetteer.sql  import_country_name.sql  import_gb_postcodearea.sql  import_specialwords.sql  index.php  reindex.php  utfasciitable.h  util.importabbreviations.php  util.importlanguages.php  util.update.php
gazetteer/website/: details.php  index.php  reverse.php  robots.txt  search.php
gazetteer/website/.htlib/: init.php  lib.php  settings.php
newtests/: CMakeLists.txt  common-import.hpp  common-options.hpp  common-pg.hpp  configs.hpp  test-expire-tiles.cpp  test-middle.cpp  test-options-database.cpp  test-options-parse.cpp  test-options-projection.cpp  test-output-gazetteer.cpp  test-output-multi-line.cpp  test-output-multi-point-multi-table.cpp  test-output-multi-tags.cpp  test-output-pgsql-area.cpp  test-output-pgsql-int4.cpp  test-output-pgsql-schema.cpp  test-output-pgsql-tablespace.cpp  test-output-pgsql-validgeom.cpp  test-output-pgsql-z_order.cpp  test-output-pgsql.cpp  test-parse-osmium.cpp  test-persistent-cache.cpp  test-ram-cache.cpp  test-wildcard-match.cpp
src/: CMakeLists.txt  check-order.cpp  check-order.hpp  command-line-app.cpp  command-line-app.hpp  command-line-parser.cpp  command-line-parser.hpp  db-check.cpp  db-check.hpp  db-copy-mgr.hpp  db-copy.cpp  db-copy.hpp  debug-output.cpp  debug-output.hpp  dependency-manager.cpp  dependency-manager.hpp  domain-matcher.hpp  expire-config.hpp  expire-output.cpp  expire-output.hpp  expire-tiles.cpp  expire-tiles.hpp  flex-index.cpp  flex-index.hpp  flex-lua-expire-output.cpp  flex-lua-expire-output.hpp  flex-lua-geom.cpp  flex-lua-geom.hpp  flex-lua-index.cpp  flex-lua-index.hpp  flex-lua-locator.cpp  flex-lua-locator.hpp  flex-lua-table.cpp  flex-lua-table.hpp  flex-lua-tileset.cpp  flex-lua-tileset.hpp  flex-lua-wrapper.hpp  flex-lua.cpp  flex-table-column.cpp  flex-table-column.hpp  (+148 more)
tests/: CMakeLists.txt  area-reprojection.osm  catch-main.cpp  common-buffer.hpp  common-chdir.hpp  common-cleanup.cpp  common-cleanup.hpp  common-import.hpp  common-options.hpp  common-pg.cpp  common-pg.hpp  common.hpp  fixture-tablespace-cleanup  fixture-tablespace-setup  hstore-match-only.osm  hstore-match-only.style  liechtenstein-2013-08-03.osm.bz2  liechtenstein-2013-08-03.osm.pbf  middle-tests.cpp  middle-tests.hpp  mockups.hpp  regression-test.py  regression-test.py.in  regression-test.sh  regression.py  run-bdd-tests.in  run-behave.in  test-area-reprojection.cpp  test-check-input.cpp  test-db-copy-mgr.cpp  test-db-copy-thread.cpp  test-domain-matcher.cpp  test-expire-from-geometry.cpp  test-expire-tiles.cpp  test-flex-indexes.cpp  test-gen-grouped-linemerge.cpp  test-geom-box.cpp  test-geom-collections.cpp  test-geom-lines.cpp  test-geom-linestrings.cpp  (+108 more)
tests/bdd/: environment.py
tests/bdd/command-line/: dsn.feature  invalid.feature  replication.feature  replication_legacy.feature  replication_schema.feature  schema.feature  test_style.feature
tests/bdd/expire/: expire.feature
tests/bdd/flex/: area.feature  bbox.feature  collection.feature  delete-callbacks.feature  empty-insert.feature  expire-diff.feature  expire-limit.feature  expire.feature  extra-attributes.feature  extra_attributes.feature  geometry-collection.feature  geometry-function-area.feature  geometry-iteration.feature  geometry-linestring.feature  geometry-multilinestring.feature  geometry-multipoint.feature  geometry-null.feature  geometry-point.feature  (+37 more)
tests/data/: gazetteer-test.style  hstore-match-only.osm  liechtenstein-2013-08-03.osm.bz2  liechtenstein-2013-08-03.osm.pbf  test_expire.lua  test_expire_limit.lua  test_forward_dependencies.opl  test_forward_dependencies_diff.opl  test_invalid_location.osm  test_multipolygon_diff.osc  test_multipolygon_postdiff.osm  test_output_flex.lua  test_output_flex_area.lua  test_output_flex_area.osm  test_output_flex_area_25832_25832.lua  test_output_flex_area_25832_3857.lua  test_output_flex_area_25832_4326.lua  test_output_flex_area_3857_25832.lua  test_output_flex_area_3857_3857.lua  test_output_flex_area_3857_4326.lua  test_output_flex_area_4326_25832.lua  test_output_flex_area_4326_3857.lua  test_output_flex_area_4326_4326.lua  test_output_flex_area_mix.lua  test_output_flex_attr.lua  test_output_flex_bbox.lua  test_output_flex_extra.lua  test_output_flex_fail.lua  test_output_flex_invalid_geom.lua  test_output_flex_line.lua  test_output_flex_lua_fail.lua  test_output_flex_multigeom.lua  test_output_flex_multigeom.osm  test_output_flex_multigeom_geometry.lua  test_output_flex_multigeom_geometry_false.lua  test_output_flex_multigeom_geometry_split.lua  test_output_flex_multigeom_geometry_true.lua  test_output_flex_multigeom_multipolygon.lua  test_output_flex_multigeom_multipolygon_false.lua  test_output_flex_multigeom_multipolygon_split.lua  (+26 more)
tests/lua/: tests.lua
tests/style/: comments.style  data-types.style  invalid-data-type.style  invalid-osm-type.style  missing.style  node.style  valid.style  way-area.style
(+618 files in other folders)
